<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools">

    <!-- App name -->
    <string name="app_name" translatable="false">HelloMundo</string>

    <!--
     *
     * Common
     *
    -->
    <string name="common_pleaseWait">Please wait…</string>
    <string name="common_toast_unexpectedError">An unexpected error occurred.<xliff:g id="new_line">\n</xliff:g>Please try again.</string>
    <!-- Shown on dialog buttons -->
    <string name="common_discard">Discard</string>
    <!-- Shown on dialog buttons -->
    <string name="common_done">Done</string>
    <!-- Note to inform that a Webcam was defined by the user -->
    <string name="common_userDefined">User defined webcam</string>
    <!-- Shown on dialog title -->
    <string name="common_confirmation">Confirmation</string>
    <!-- Shown on dialog title -->
    <string name="common_shareWith">Share with<xliff:g id="dotdotdot">&#8230;</xliff:g></string>

    <!--
     *
     * Global
     *
    -->
    <!-- Advertisement -->
    <string name="global_ad">(Ad)</string>
    <string name="acra_toast">The application has crashed.<xliff:g id="new_line">\n</xliff:g>Logs are being sent so we can fix the problem.</string>

    <!--
     *
     * Main screen
     *
    -->
    <!--  -->
    <string name="main_txtWallpaperAutoUpdate">Auto update wallpaper</string>
    <string name="main_toast_wallpaperUpdated">Wallpaper updated.</string>
    <string name="main_toast_fileSaved">Picture saved to the <xliff:g id="app_name">HelloMundo</xliff:g> album.</string>
    <string name="main_dialog_noSdCard">The external storage is currently not available.</string>
    <string name="main_shareText">Picture of <xliff:g id="webcam_name">\'%1$s\'</xliff:g>, <xliff:g id="webcam_location">%2$s</xliff:g>, taken on <xliff:g id="picture_date">%3$s</xliff:g>.<xliff:g id="spaces">&#160;&#160;</xliff:g>Spotted on <xliff:g id="app_name">HelloMundo</xliff:g> for Android.</string>
    <string name="main_shareText_userWebcam">Picture of <xliff:g id="webcam_name">\'%1$s\'</xliff:g> taken on <xliff:g id="picture_date">%3$s</xliff:g>.<xliff:g id="spaces">&#160;&#160;</xliff:g>Spotted on <xliff:g id="app_name">HelloMundo</xliff:g> for Android.</string>
    <string name="main_previewFrame_weight" translatable="false">100</string>
    <string name="main_txtNoImageWarning">Could not download the image.<xliff:g id="new_line">\n</xliff:g>Network problem?<xliff:g id="spaces">&#160;&#160;</xliff:g>Try to refresh later.</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_pick">Pick webcam</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_refresh">Refresh wallpaper</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_share">Share current picture</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_save">Save current picture</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_settings">Settings</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_about">About</string>
    <!-- Action bar (menu) item -->
    <string name="main_menu_help">Help</string>

    <!--
     *
     * Pick webcam screen
     *
    -->
    <string name="pickWebcam_random_title">Random</string>
    <string name="pickWebcam_random_subtitle">A different webcam every time</string>
    <string name="pickWebcam_source">Source: <xliff:g id="webcam_web_site">%1$s</xliff:g></string>
    <string name="pickWebcam_previewDialog_cantPreviewToast">Could not download the picture.</string>
    <!-- Button: exclude from random (limited space) -->
    <string name="pickWebcam_exclFromRandom">Excl. from random</string>
    <!-- Button: delete (limited space) -->
    <string name="pickWebcam_delete">Delete</string>
    <!-- Button: show on map (limited space) -->
    <string name="pickWebcam_showOnMap">Show on map</string>
    <!-- Button: preview (limited space) -->
    <string name="pickWebcam_preview">Preview</string>
    <string name="pickWebcam_deleteConfirmDialog_message">Are you sure you want to delete this webcam?</string>
    <string name="pickWebcam_webcamDeletedToast">Webcam deleted.</string>
    <string name="pickWebcam_webcamAddedToast">Webcam added.</string>
    <!-- Action bar (menu) item -->
    <string name="pickWebcam_menu_newWebcam">New webcam</string>

    <!--
     *
     * Preferences screen
     *
    -->
    <string name="preferences_updateInterval_title">Update frequency</string>
    <string name="preferences_dimmed_title">Dim wallpaper</string>
    <string name="preferences_dimmed_summary">Make the picture dimmer, making the icons easier to see</string>
    <string name="preferences_showInfo_title">Show webcam info</string>
    <string name="preferences_showInfo_summary">Print webcam name, location and local time on wallpaper</string>
    <string name="preferences_avoidNight_title">Avoid night</string>
    <string name="preferences_avoidNight_summary">In random mode, discard places where it\'s night time</string>

    <!--
     *
     * Add user webcam screen
     *
    -->
    <string name="addUserWebcam_edtName_hint">Name</string>
    <string name="addUserWebcam_edtUrl_hint">Webcam URL</string>
    <string name="addUserWebcam_http">http://</string>
    <string name="addUserWebcam_txtInfo1">You can add a webcam to the list if you know its URL.</string>
    <string name="addUserWebcam_txtInfo2">Note: only \'photo\' (not video) cams are supported.</string>

    <!--
     *
     * About screen
     *
    -->
    <string name="about_txtInfo1"><![CDATA[<b>BoD HelloMundo</b> v${versionName}<br/>Built on ${buildDate}<font color="#808080"> – ${gitSha1}</font>]]></string>
    <string name="about_txtInfo2" tools:ignore="TypographyOther,TypographyDashes">Copyright (C) 2009-2014 Benoit \'BoD\' Lubek.\nAdditional code by Carmen Alvarez (c@rmen.ca).</string>
    <string name="about_txtInfo3" translatable="false">Licensed under the terms of the GNU General Public License.</string>
    <string name="about_email" translatable="false">→ BoD@JRAF.org</string>
    <string name="about_web" translatable="false">→ JRAF.org/android</string>
    <string name="about_sources" translatable="false">→ github.com/BoD/HelloMundo</string>
    <string name="about_btnShare">Share app</string>
    <string name="about_btnRate">Rate app</string>
    <string name="about_btnOtherApps">Other apps</string>
    <string name="about_btnEula"><u>End user license agreement</u></string>
    <string name="about_shareText_subject">Checkout out HelloMundo!</string>
    <string name="about_shareText_body">HelloMundo for Android is a most excellent app!\nCheck it out here:\nhttp://play.google.com/store/apps/details?id=%s</string>
    <string name="about_btnDonate">Donate</string>
    <string name="about_menu_sendLogs">Send logs</string>
    <string name="about_toast_sendLogs">Logs are being sent.</string>

    <!--
     *
     * Eula screen
     *
    -->
    <string name="eula_title">End user license agreement</string>

    <!--
     *
     * Welcome screen
     *
    -->
    <string name="welcome_0_txtTitle">Welcome!</string>
    <string name="welcome_0_txtText">1. Press this button to pick a webcam from the list…</string>
    <string name="welcome_1_txtText">2. Switch ON to automatically refresh your wallpaper every 30 minutes…</string>
    <string name="welcome_2_txtText">3. You can also add a widget to your home screen.</string>
    <string name="welcome_3_txtTitle">Enjoy the view!</string>
    <string name="welcome_3_txtText">You\'re done!\nChoose \"Help\" to see this again.</string>
    <string name="welcome_next">Next</string>

    <!--
     *
     * App Widgets
     *
    -->
    <string name="appwidget_webcam_label">HelloMundo Webcam (2x2)</string>
    <string name="appwidget_webcam_label_3x3">HelloMundo Webcam (3x3)</string>
    <string name="appwidget_refresh_label">HelloMundo Refresh</string>

</resources>