<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtInfo1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addUserWebcam_txtInfo1"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo1"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:hint="@string/addUserWebcam_edtName_hint"
        android:inputType="textCapWords" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/edtUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edtName"
        android:layout_marginLeft="-4dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="8dp"
        android:layout_toRightOf="@+id/txtHttp"
        android:hint="@string/addUserWebcam_edtUrl_hint"
        android:imeOptions="actionDone"
        android:inputType="textUri"
        android:paddingLeft="4dp" />

    <TextView
        android:id="@+id/txtHttp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/edtUrl"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/addUserWebcam_http"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/txtInfo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtUrl"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addUserWebcam_txtInfo2"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="?android:attr/textColorHint" />

</RelativeLayout>