<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jraf="http://schemas.android.com/apk/res/org.jraf.android.latoureiffel"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- Main item -->

    <RelativeLayout
        android:id="@+id/conMainItem"
        android:layout_width="match_parent"
        android:layout_height="@dimen/cell_webcam_collapsed_height"
        android:background="@color/pick_webcam_item_bg" >

        <ImageView
            android:id="@+id/imgThumbnail"
            android:layout_width="@dimen/pickWebcam_item_imgThumbnail_widthHeight"
            android:layout_height="@dimen/pickWebcam_item_imgThumbnail_widthHeight" />

        <ImageView
            android:id="@+id/imgExcludedFromRandom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="24dp"
            android:paddingTop="2dp"
            android:src="@drawable/ic_excluded_from_random"
            android:visibility="gone" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignWithParentIfMissing="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_toLeftOf="@+id/btnExtend"
            android:layout_toRightOf="@+id/imgThumbnail"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:ellipsize="marquee"
                android:maxLines="1"
                android:singleLine="true"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/txtLocationAndTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#888" />
        </LinearLayout>

        <org.jraf.android.util.ui.dontpresswithparent.DontPressWithParentView
            android:id="@+id/btnExtend"
            android:layout_width="32dp"
            android:layout_height="64dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/dotdotdot"
            android:clickable="true" />

        <!-- Separator -->

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/cell_webcam_separator_height"
            android:layout_alignParentBottom="true"
            android:background="#1A000000" />
        <!-- android:background="@drawable/list_divider_holo_light" -->
    </RelativeLayout>

    <!-- Extented item -->

    <FrameLayout
        android:id="@+id/conExtended"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:background="@drawable/extended_bg" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/cell_webcam_extended_height" >

            <org.jraf.android.util.ui.dontpresswithparent.DontPressWithParentLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_marginTop="6dp"
                android:baselineAligned="false"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/btnExcludeFromRandom"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ic_ext_bg"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ext_exclude_from_random" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="-2dp"
                        android:ellipsize="marquee"
                        android:singleLine="true"
                        android:text="@string/pickWebcam_exclFromRandom"
                        android:textColor="@color/ic_ext_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnShowOnMap"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ic_ext_bg"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:id="@+id/imgShowOnMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:duplicateParentState="true"
                        android:src="@drawable/ic_ext_show_on_map" />

                    <TextView
                        android:id="@+id/txtShowOnMap"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="-2dp"
                        android:duplicateParentState="true"
                        android:text="@string/pickWebcam_showOnMap"
                        android:textColor="@color/ic_ext_text"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnPreview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@color/ic_ext_bg"
                    android:clickable="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical" >

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_ext_preview" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="2dp"
                        android:layout_marginTop="-2dp"
                        android:text="@string/pickWebcam_preview"
                        android:textColor="@color/ic_ext_text"
                        android:textSize="12sp" />
                </LinearLayout>
            </org.jraf.android.util.ui.dontpresswithparent.DontPressWithParentLinearLayout>

            <TextView
                android:id="@+id/txtSourceUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:autoLink="web"
                android:background="#aaa"
                android:gravity="right|center_vertical"
                android:linksClickable="false"
                android:maxLines="1"
                android:paddingBottom="4dp"
                android:paddingRight="4dp"
                android:paddingTop="2dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#EEE"
                android:textColorLink="#44D" />
        </RelativeLayout>

        <!-- Shadow -->

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/extended_bg_shadow" />
    </FrameLayout>

</LinearLayout>